<resources>
    <string name="app_name">MovieFlix</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_confirmation">Confirme sua senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_register">Criar uma nova conta</string>
    <string name="action_register_confirmation">Finalizar registro!</string>
    <string name="welcome">"Bem vinde!"</string>
    <string name="invalid_username">Não é um usuário válido</string>
    <string name="invalid_password">Senha deve conter mais de >5 caracteres</string>
    <string name="login_failed">"Login falhou"</string>
    <string name="poster_do_filme">Poster do Filme</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="salvar_login_e_senha">Salvar Login e Senha</string>
</resources>