<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.view.RegisterActivity">

    <EditText
        android:id="@+id/etUserNameRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:hint="@string/prompt_name"
        android:inputType="text"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/etUserNameRegister"
        app:layout_constraintStart_toStartOf="@+id/etUserNameRegister"
        app:layout_constraintTop_toBottomOf="@+id/etUserNameRegister" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etEmailRegister"
        app:layout_constraintStart_toStartOf="@+id/etEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/etEmailRegister" />

    <EditText
        android:id="@+id/etConfirmPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password_confirmation"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etPasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/etPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" />

    <Button
        android:id="@+id/bvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/action_register_confirmation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPasswordRegister"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>